# DynaC

./: .gitignore  Cargo.toml  LICENSE  README.md
dynac/: Cargo.toml
dynac/examples/: 00_hello.dc  02_control_flow.dc  04_native_clock.dc  05_structs_stack_vs_heap.dc  08_errors.dc  README.md
dynac/src/: call_frame.rs  chunk.rs  compiler.rs  complier.rs  debug.rs  gc.rs  main.rs  object.rs  object_manager.rs  scanner.rs  table.rs  value.rs  vm.rs
dynac/src/objects/: mod.rs  object.rs  object_closure.rs  object_function.rs  object_manager.rs  object_native_function.rs  object_string.rs  object_struct.rs  object_trait.rs  object_upvalue.rs
dynac/src/std_mod/: time.rs
examples/: 01_variables.lat  03_functions.lat  06_structs_nested_and_promotion.lat  07_traits_and_impls.lat  README.md
src/: chunk.rs  constants.rs  debug.rs  main.rs  memory.rs  util.rs  value.rs
src/objects/: mod.rs  object.rs  object_closure.rs  object_function.rs  object_manager.rs  object_string.rs
