[package]
name = "dynac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["debug_trace_execution", "debug_print_code"]
debug_trace_execution = []
debug_print_code = []
debug_trace_object = []
gc_debug = []

[dependencies]
strum = "0.24"
strum_macros = "0.24"
once_cell = "1.21.3"
phf = { version = "0.11.3", features = ["macros"] }